[package]
name = "agora"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_common_assets = { version = "0.10.0", features = ["toml"] }
num-traits = "0.2.18"
serde = { version = "1.0.198", features = ["derive"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
